--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -1271,12 +1271,6 @@ i.e., strings that match a given regular expression.
 %If this triple is not stated, a constraint violation occurs.
 %If we use sub-properties with reasoning, the triple (which would cause a constraint violation) is inferred and therefore resolves the possible constraint violation.
 
-\begin{itemize}
-  \item \textcolor{red}{Reviewer1: This is wrong that the Tbox axioms ( RDF constraints in this paper) can be classified as it is suggested in Section 3. The reason is that there exist possibly complex logical interferences between them. For instance, even in lightweight DLs such as  DL-Lite, positive inclusions (PIs) can be used to infer negative inclusions (NIs).}
-%	\item \textcolor{red}{Erman: we mean ontological reasoning  here, the discussion is done according to well-established complexity results (in literature) on reasoning in particular DL languages, having only those  features used in constraints. Therefore the complex interferences are included. }
-%	\item \textcolor{red}{The first paragraph is confusing. Refer to what? Follows? }
-\end{itemize}
-
 For each constraint type we investigate how efficient in terms of runtime validation is performed with and without reasoning.
 Since the combination of \emph{DL} constructs, needed to express a constraint type, determines its computational complexity, 
 by mapping to \emph{DL} we get an idea of the performance for each constraint type in worst case.
@@ -1361,11 +1355,11 @@ Reasoning may resolve violations which improves data quality.
 %After reasoning, however, the triples \ms{Yoda a Jedi , FeelingForce} are inferred resulting in valid data. 
 The {\em Property Domain} (\emph{R-25}) constraint
 {\small\ms{$\exists$ author.$\top$ $\sqsubseteq$ Publication}} 
-ensures that only \emph{publications} can have {\em author} relationships to \emph{persons}
+ensures that only \emph{publications} can have {\em author} relationships %to \emph{persons}
 (in \emph{OWL 2 QL}: {\small\ms{author rdfs:domain Publication).}}
 Without reasoning, the triple {\small\ms{author(Alices-Adventures-In-Wonderland,} \ms{Lewis-Carroll)}} leads to a violation
-if it is not explicitly stated that \emph{Lewis-Carroll} is a \emph{person}. 
-With reasoning, on the contrary, the class assignment {\small\ms{rdf:type(Lewis-Carroll, Person)}} is inferred which prevents the violation to be raised.
+if it is not explicitly stated that \emph{Alices-Adventures-In-Wonderland} is a \emph{publication}. 
+With reasoning, on the contrary, the class assignment {\small\ms{rdf:type(Alices-Adventures-In-Wonderland, Publication)}} is inferred which prevents the violation to be raised.
 
 %The {\em Property Domain}\footnote{Corresponds to {\em R-25-PROPERTY-DOMAIN}} constraint
 %\ms{$\exists$ studentOf.$\top$ $\sqsubseteq$ JediStudent}
@@ -1379,7 +1373,7 @@ With reasoning, on the contrary, the class assignment {\small\ms{rdf:type(Lewis-
 %Without reasoning, the data \ms{Anakin studentOf Obi-Wan} is invalid and causes a constraint violation, as it is not explicitly stated that \ms{Anakin} is assigned to the class \ms{Jedi}. 
 %When inferencing is performed before validating, the class assignment \ms{Anakin a Jedi} is inferred which prevents the constraint violation to be raised.
 
-Reasoning may cause valuable violations which increase data quality.
+Reasoning may cause valuable violations which increase data quality in case the violation is taken into account.
 The {\em existential quantification} (\emph{R-86})
 {\small\ms{Publication} \ms{$\equiv$} \ms{$\exists$} \ms{publisher.Publisher}} restricts publications to have at least one publisher: 
 %- which can be expressed in \emph{OWL 2 QL}:
@@ -1392,11 +1386,14 @@ The {\em existential quantification} (\emph{R-86})
 If reasoning is executed on the triples {\small\ms{publisher(A+Conference-Proceedings, A+Publisher)} and \ms{rdf:type (A+Publisher, Publisher),}} 
 it is inferred that {\em A+Conference-Proceedings} is a {\em publication}.
 Now, all constraints associated with {\em publications} are also validated for {\em A+Conference-Proceedings} (e.g. that \emph{publications} must have at least one \emph{author}).
-Without reasoning, in contrast, the fact that \emph{A+Conference-Proceedings} is a publication is not explicit
-which is the reason why constraints on {\em publications} are not validated for \emph{A+Conference-Proceedings}.
+Without reasoning, in contrast, the fact that \emph{A+Conference-Proceedings} is a \emph{publication} is not explicit in the data
+which is the reason why constraints on {\em publications} are not validated for \emph{A+Conference-Proceedings}
+and therefore additional violations do not occur which may be useful to enhance data quality. 
 
 RDF validation with reasoning corresponds to performing \emph{SPARQL} queries. 
-As \emph{OWL 2} profiles are based on the \textit{DL-Lite} family and query answering in \emph{OWL 2 QL} (which is based on \textit{DL-Lit}$e_R$) is performed in \textsc{LogSpace} (or rather in \emph{AC$^0$}) \cite{Calvanese2007}, the same complexity class applies for
+As \emph{OWL 2} profiles are based on the \textit{DL-Lite} family,
+\emph{OWL 2 QL} is based on \textit{DL-Lit}$e_R$,
+and query answering in \emph{OWL 2 QL} is performed in \textsc{LogSpace} (or rather in \emph{AC$^0$}) \cite{Calvanese2007}, the same complexity class applies for
 constraint validation by queries with reasoning.
 As TBox reasoning in \emph{OWL 2 QL} is performed in \textsc{Ptime} \cite{Calvanese2007}, 
 complete query rewriting as well as reasoning and subsequent querying (combined complexity) is carried out in \textsc{Ptime} \cite{Artale2009,Calvanese2007}.  
@@ -1431,12 +1428,21 @@ When performing reasoning, the triples {\small\ms{author(The-Lord-Of-The-Rings,}
 let a reasoner infer that \emph{Tolkien} is a \emph{person}.
 In case reasoning is not executed, a violation is raised
 since it is not explicitly stated that \emph{Tolkien} is a \emph{person}.
+As a consequence, violations on \emph{persons} are not checked for \emph{Tolkien} which prevents further validation. 
 %and each \emph{publication} can only have \emph{author} relationships to \emph{persons}.
 
-With the more expressive profile \emph{OWL 2 DL}, reasoning is executed in \textsc{N2exptime} \cite{owl2profiles2008} which is a class of considerably higher complexity.
-As we consider ontological reasoning, complexity classes are assigned to validation types 
-according to well-established complexity results on reasoning of \emph{DL} languages.
+With the more expressive profile \emph{OWL 2 DL}, reasoning is executed in \textsc{N2exptime} \cite{owl2profiles2008} 
+which is a class of considerably higher complexity than \textsc{Ptime}, the complexity class for \emph{OWL 2 QL} reasoning.
+As we consider ontological reasoning, complexity classes are assigned to sets of constraint types 
+according to well-established complexity results in literature on reasoning of \emph{DL} languages.
 Therefore, the classification also includes complex logical interferences between TBox axioms.
+
+\begin{itemize}
+  \item \textcolor{red}{Reviewer1: This is wrong that the Tbox axioms ( RDF constraints in this paper) can be classified as it is suggested in Section 3. The reason is that there exist possibly complex logical interferences between them. For instance, even in lightweight DLs such as  DL-Lite, positive inclusions (PIs) can be used to infer negative inclusions (NIs).}
+	\item \textcolor{blue}{question for Erman: Is the reviewer's issue sufficiently tackled by the paragraph before?}
+%	\item \textcolor{red}{Erman: we mean ontological reasoning  here, the discussion is done according to well-established complexity results (in literature) on reasoning in particular DL languages, having only those  features used in constraints. Therefore the complex interferences are included. }
+%	\item \textcolor{red}{The first paragraph is confusing. Refer to what? Follows? }
+\end{itemize}
 
 %{\em Universal quantifications}\footnote{Corresponds to {\em R-91-UNIVERSAL-QUANTIFICATION-ON-PROPERTIES}}
 %contain all those individuals that are connected by a particular property only to individuals that are instances of a specific class.
@@ -2235,7 +2241,8 @@ When they write <author, rdfs:range, Person>, this means precisely that they do 
 This is the interest of RDF triplestores: to allow incomplete description of data, while allowing reasoning to complete it.
 Section 2 makes complicate this basic property for which a sentence in the introduction would have been sufficient.
 BTW, it is completely misleading to say in introduction  "Reasoning is a promising solution as a pre-validation step to overcome this shortcoming": reasoning must be part of RDF data management as soon as RDFS statements are declared (otherwise, why would they be declared ?).}
-    \item \textcolor{red}{answer: We use RDF as data model (with intended semantics) when performing reasoning with RDFS/OWL 2 semantics (OWA/nUNA) as well as for RDF validation and not just as a notation. We suggest using RDFS/OWL 2 semantics (OWA, nUNA) when performing reasoning (the original intention of RDFS/OWL 2) and we propose to take multiple languages into account (i.a. OWL 2) with different semantics (CWA, UNA) for the purpose to validate RDF data. Reasoning should be an optional step prior to validation. When reasoning is not wished to be performed, however, then omitted class assignment triples, e.g., must cause constraint violations as they are not intended to be inferred.} 
+    \item \textcolor{blue}{answer from Erman and Thomas: We use RDF as data model (with intended semantics) when performing reasoning with RDFS/OWL 2 semantics (OWA/nUNA) as well as for RDF validation and not just as a notation. We suggest using RDFS/OWL 2 semantics (OWA, nUNA) when performing reasoning (the original intention of RDFS/OWL 2) and we propose to take multiple languages into account (i.a. OWL 2) with different semantics (CWA, UNA) for the purpose to validate RDF data. Reasoning should be an optional step prior to validation. When reasoning is not wished to be performed, however, then omitted class assignment triples, e.g., must cause constraint violations as they are not intended to be inferred.} 
+		\item \textcolor{blue}{question for Erman: How to tackle this issue in our paper?}
 \end{itemize}
 %	\item While gross numbers give some insight, if the paper listed which
 %problems can be solved by each constraint language, it might allow
